--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,9 @@ gen/
 out/
 
 # Gradle files
-.gradle/
-build/
+.gradle
+/build
+.DS_Store
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -30,7 +31,7 @@ proguard/
 .navigation/
 
 # Android Studio captures folder
-captures/
+/captures
 
 # Intellij
 *.iml
